--- a/FileParser.vcxproj
+++ b/FileParser.vcxproj
@@ -96,7 +96,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)Dependencies/GLFW/include;$(SolutionDir)Dependencies/glew-2.1.0/include;$(SolutionDir)Dependencies\xsimd\include;$(SolutionDir)Dependencies\simde\include</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-	  <AdditionalOptions>/Zc:__cplusplus /Ox %(AdditionalOptions)</AdditionalOptions>
+	  <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
 	  <BasicRuntimeChecks>Default</BasicRuntimeChecks>
     </ClCompile>
     <Link>
