--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,11 +28,11 @@ target_compile_definitions(FileParser PRIVATE GLEW_STATIC)
 IF(WIN32)
     set_target_properties(glew PROPERTIES IMPORTED_LOCATION "./dependencies/glew-2.1.0/lib/Windows/Win32/glew32s.lib")
     set_target_properties(glfw3 PROPERTIES IMPORTED_LOCATION "./dependencies/GLFW/lib/Windows/glfw3.lib")
-    target_link_libraries(FileParser PRIVATE opengl32 files glew glfw3)
+    target_link_libraries(FileParser PRIVATE files opengl32 glew glfw3)
 ELSE()
     set_target_properties(glew PROPERTIES IMPORTED_LOCATION "./dependencies/glew-2.1.0/lib/Linux/libGLEW.a")
     set_target_properties(glfw3 PROPERTIES IMPORTED_LOCATION "./dependencies/GLFW/lib/Linux/libglfw3.a")
-    target_link_libraries(FileParser PRIVATE GL files glew glfw3)
+    target_link_libraries(FileParser PRIVATE files GL glew glfw3)
 ENDIF()
 
 target_compile_options(FileParser PRIVATE -Wall -Wpedantic)
