Cleaned up files using CLion suggestions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,11 +32,14 @@ IF(WIN32)
     set_target_properties(glew PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/dependencies/glew-2.1.0/lib/Windows/x64/glew32s.lib")
     set_target_properties(glfw3 PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/dependencies/GLFW/lib/Windows/x64/glfw3.lib")
     target_link_libraries(FileParser PRIVATE opengl32 glew glfw3)
-    target_compile_options(FileParser PRIVATE /W4)
 ELSE()
     set_target_properties(glew PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/dependencies/glew-2.1.0/lib/Linux/libGLEW.a")
     set_target_properties(glfw3 PROPERTIES IMPORTED_LOCATION "${CMAKE_SOURCE_DIR}/dependencies/GLFW/lib/Linux/libglfw3.a")
     target_link_libraries(FileParser PRIVATE GL glew glfw3)
-    target_compile_options(FileParser PRIVATE -Wall -Wpedantic)
 ENDIF()
 
+IF(MSVC)
+    target_compile_options(FileParser PRIVATE /W4)
+ELSEIF (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    target_compile_options(FileParser PRIVATE -Wall -Wpedantic)
+ENDIF()
